force-app/main/default/objects/Custody__c/Custody__c.object-meta.xml
<CustomObject>
    <label>Custody</label>
    <nameField>
        <displayFormat>Cust-{000}</displayFormat>
        <label>Custody Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custodys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>