force-app/main/default/objects/Custody__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Number</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Custodys</relationshipLabel>
    <relationshipName>Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>