force-app/main/default/objects/Custody__c/fields/ApplicationExternalId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ApplicationExternalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>