force-app/main/default/objects/Custody__c/fields/Box_Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Box_Bar_Code__c</fullName>
    <label>Box Bar Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>