force-app/main/default/objects/Custody__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Name</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Custodys</relationshipLabel>
    <relationshipName>Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>