force-app/main/default/objects/Custody__c/fields/Checker_Id__c.field-meta.xml
<CustomField>
    <fullName>Checker_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checker Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custodys1</relationshipName>
    <type>Lookup</type>
</CustomField>