force-app/main/default/objects/Custody__c/fields/Checker_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Checker_Remarks__c</fullName>
    <label>Checker Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>