force-app/main/default/objects/Custody__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Custodys</relationshipLabel>
    <relationshipName>Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>