force-app/main/default/objects/Custody__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File Bar Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>