force-app/main/default/objects/Custody__c/fields/File_Inward_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Inward_Status__c</fullName>
    <label>File Inward Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>