force-app/main/default/objects/Custody__c/fields/File_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Status__c</fullName>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Temp out</fullName>
            </value>
            <value>
                <fullName>Permanent out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>