force-app/main/default/objects/Custody__c/fields/Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Date__c</fullName>
    <label>Handoff Date</label>
    <type>Date</type>
</CustomField>