force-app/main/default/objects/Custody__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <label>Maker Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>