force-app/main/default/objects/Custody__c/fields/Maker_Id__c.field-meta.xml
<CustomField>
    <fullName>Maker_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maker Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>