force-app/main/default/objects/Custody__c/fields/Old_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Application_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Application Number</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Custodys (Old Application Number)</relationshipLabel>
    <relationshipName>Custodys1</relationshipName>
    <type>Lookup</type>
</CustomField>