force-app/main/default/objects/Custody__c/fields/Stage_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_in_Date__c</fullName>
    <label>Stage in Date</label>
    <type>Date</type>
</CustomField>