force-app/main/default/objects/Custody__c/fields/Storage_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Storage_Vendor_Name__c</fullName>
    <label>Storage Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crown</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>PNW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>